--- a/tudouShop/bin/tudouShop.dll.config
+++ b/tudouShop/bin/tudouShop.dll.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="FineUI" type="FineUI.ConfigSection, FineUI" requirePermission="false" />
@@ -19,7 +19,7 @@
       CustomThemeBasePath="~/res/theme" 
   -->
   <FineUI DebugMode="false" />
-  <appSettings >
+  <appSettings>
     <!-- 连接字符串是否加密 -->
     <add key="ConStringEncrypt" value="false" />
     <!-- 数据库连接字符串,（如果采用加密方式，上面一项要设置为true；加密工具，可在官方下载，
@@ -28,7 +28,7 @@
     <!--其它模块连接字符串，可以不断增加以便同一个项目支持连接多个数据库。如果没有，可以删除该行-->
     <add key="ConnectionString2" value="server=127.0.0.1;database=eShopDB;uid=sa;pwd=123" />
   </appSettings>
-  <connectionStrings >
+  <connectionStrings>
     <add name="connstr" connectionString="Data Source=.;Initial Catalog=eShopDB;User Id=sa;Password=123;"></add>
   </connectionStrings>
   <system.web>
@@ -42,7 +42,7 @@
     </httpModules>
     <httpHandlers>
       <add verb="GET" path="res.axd" type="FineUI.ResourceHandler, FineUI" validate="false" />
-      <add verb="*" path="ajaxpro/*.ashx" type="AjaxPro.AjaxHandlerFactory,AjaxPro.2" validate="false"/>
+      <add verb="*" path="ajaxpro/*.ashx" type="AjaxPro.AjaxHandlerFactory,AjaxPro.2" validate="false" />
     </httpHandlers>
     <httpRuntime maxRequestLength="102400 " />
     <customErrors mode="Off" />
@@ -85,4 +85,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+    <system.webServer>
+        <directoryBrowse enabled="true" />
+    </system.webServer>
 </configuration>
