增加查看买到商品的页面

--- a/tudouShop/Web.config
+++ b/tudouShop/Web.config
@@ -18,7 +18,7 @@
       CustomTheme="" 
       CustomThemeBasePath="~/res/theme" 
   -->
-  <FineUI DebugMode="false" />
+  <FineUI DebugMode="False" />
   <appSettings>
     <!-- 连接字符串是否加密 -->
     <add key="ConStringEncrypt" value="false" />
@@ -29,7 +29,8 @@
     <add key="ConnectionString2" value="server=127.0.0.1;database=eShopDB;uid=sa;pwd=123" />
   </appSettings>
   <connectionStrings>
-    <add name="connstr" connectionString="Data Source=.;Initial Catalog=eShopDB;User Id=sa;Password=123;"></add>
+    <!--<add name="connstr" connectionString="Data Source=.;Initial Catalog=eShopDB;User Id=sa;Password=123;"></add>-->
+    <add name="connstr" connectionString="Data Source=.;Initial Catalog=eShopDB;Integrated Security=True;"></add>
   </connectionStrings>
   <system.web>
     <pages controlRenderingCompatibilityVersion="4.0" clientIDMode="AutoID">
