--- a/tudouShop/tudouShop.csproj
+++ b/tudouShop/tudouShop.csproj
@@ -80,6 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Admin\AdminLogin.aspx" />
+    <Content Include="Admin\OrderList.aspx" />
     <Content Include="Admin\ProductInfo.aspx" />
     <Content Include="Admin\ProductList.aspx" />
     <Content Include="Admin\userInfo.aspx" />
@@ -1035,6 +1036,13 @@
     </Compile>
     <Compile Include="Admin\AdminLogin.aspx.designer.cs">
       <DependentUpon>AdminLogin.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\OrderList.aspx.cs">
+      <DependentUpon>OrderList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\OrderList.aspx.designer.cs">
+      <DependentUpon>OrderList.aspx</DependentUpon>
     </Compile>
     <Compile Include="Admin\ProductInfo.aspx.cs">
       <DependentUpon>ProductInfo.aspx</DependentUpon>
